2003-12-01  Ettore Perazzoli  <ettore@ximian.com>

	* gui/component/addressbook.c (struct AddressbookView): Replace
	activity_client with activity_id.
	(set_status_message): Use the EActivityHandler from the
	AddressbookComponent.

	* gui/component/addressbook-component.c (struct
	_AddressbookComponentPrivate): New member activity_handler.
	(addressbook_component_init): Init.
	(impl_dispose): Unref.
	(addressbook_component_peek_activity_handler): New.
	(impl_createControls): Return an ETaskBar as the statusbar control
	and attach it to the activity handler.

2003-12-01  Ettore Perazzoli  <ettore@ximian.com>

	* gui/component/addressbook-component.c (impl_createControls):
	Pass a label for the status bar control for now.

2003-12-01  Larry Ewing  <lewing@ximian.com>

	* gui/component/Makefile.am (INCLUDES): remove
	GTK_DISABLED_DEPRECATED so that we can build with gtk-2.3.

2003-12-01  Rodney Dawes  <dobey@ximian.com>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in:
	* gui/component/addressbook-config.c:
	* gui/component/addressbook.c:
	* gui/component/component-factory.c:
	* gui/component/select-names/GNOME_Evolution_Addressbook_SelectNames.server.in.in:
	* gui/component/select-names/e-select-names-bonobo.c:
	* gui/component/select-names/e-select-names-factory.c:
	* gui/widgets/eab-gui-util.c:
	* gui/widgets/eab-vcard-control.c: Use BASE_VERSION for repo_ids and
	  OAFIIDs

2003-12-01  Hans Petter Jansson  <hpj@ximian.com>

	* gui/component/ldap-config.glade: Fix start page text.

2003-12-01  JP Rosevear <jpr@ximian.com>

	* conduit/Makefile.am: use privconduitdir

	* conduit/e-address.conduit.in: subst right thing

2003-12-01  JP Rosevear <jpr@ximian.com>

	* conduit/e-address.conduit.in: specify privlibdir as the location

	* conduit/Makefile.am: install the conduit to privlibdir

2003-12-01  JP Rosvear <jpr@ximian.com>

	* conduit/Makefile.am: version the .conduit file

2003-12-01  Hans Petter Jansson  <hpj@ximian.com>
